Fix typos in 2026

--- a/docs/src/_static/css/custom.css
+++ b/docs/src/_static/css/custom.css
@@ -1213,7 +1213,7 @@ span.ubi {
 }
 
 /*-------------------------------------------------------------------------
- * Tigher Tables
+ * Tighter Tables
  * -------------
  * Here, we introduce 7 levels of table "tightening" with increasingly reduced space
  * and size.  The large number of options here are merely for flexibility, giving the
